--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.2.1", features = ["derive"] }
 csv = "1.2.1"
-tch = "0.11.0"
+ndarray = "0.15.6"
+rand = "0.8.5"
+rust-bert = "0.20.0"
+tch = "0.10.0"
