--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "sentiment_analysis"
-version = "0.1.0"
+authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
+description = "Sentiment analysis AI for texts"
+
 edition = "2021"
+version = "0.1.0"
+
+license = "MIT"
+repository = "https://github.com/arthurmartelli/sentiment_analysis"
 
 [dependencies]
 clap = { version = "4.2.1", features = ["derive"] }
-csv = "1.2.1"
-ndarray = "0.15.6"
-rand = "0.8.5"
 rust-bert = "0.20.0"
-tch = "0.10.0"
